# mercor_assessment

./: .env.example  .gitignore  .mypy.ini  .ruff.toml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  setup_project.py
models/: airtable_models.py
scripts/: compress_json.py  decompress_json.py  find_base_id.py  llm_evaluation.py  shortlist_candidates.py  simple_setup.py
utils/: airtable_client.py  llm_client.py
